# LLM_reputation

./: .gitignore  CLAUDE.md  README.md  collect_stats.py  experiment.db  experiment.py  export_runs.py  find_gossip.py  judge_runs.py  keyword_judge.py  plot_stats.py  pyproject.toml  replay.py  research.py  stats.csv  stats.json
claude_docs/: agent-games-game-plan.md  agent-games-logger-plan.md  agent-games-matching-plan.md  agent-games-mvp-arch.md  agent-games-mvp-sequence.md  agent-games-orchestrator-plan.md  agent-games-plan.md  agent-games-provider-plan.md
config/: example.yaml  example_prediction.yaml  experiment.yaml  judge_qwen3_vllm.yaml  research.yaml
docs/: agent-games-agent-plan.md  agent-games-game-plan.md  agent-games-matching-plan.md  agent-games-mvp-arch.md  agent-games-mvp-explained.md  agent-games-orchestrator-plan.md  agent-games-plan.md  architecture.md  configuration.md  conventions.md  database.md  development.md  testing.md
examples/: agent_demo.py  game_demo.py  logger_demo.py  matchmaking_demo.py  orchestrator_demo.py  provider_demo.py
src/: runner.py
src/core/: agent.py  config.py  jsonextract.py  memory.py  orchestrator.py
src/games/: __init__.py  base.py  prompts.py  reputation_pd.py  talk_rules.py
src/judge/: __init__.py  base.py  judge.py  keyword.py  transcript.py
src/matchmaking/: __init__.py  base.py  random_mm.py
src/population/: __init__.py  base.py  roster.py
src/providers/: __init__.py  base.py  openai_compat.py
src/stats/: __init__.py  aggregate.py  selection.py  wilson.py
tests/: test_replay.py  test_runner.py
(+60 files in other folders)
