[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-reputation"
version = "0.0.0"
description = "Emergent reputation in populations of LLM agents"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "matplotlib>=3.11.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

# The importable package is `src` (e.g. `from src.core.config import ...`),
# which doesn't match the distribution name, so point the build backend at it.
# This makes `uv sync` install the project (editable), so `src` imports work
# when running scripts directly, not only under pytest's pythonpath setting.
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
